--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse--1051228726\testng-customsuite.xml</span>
+                    <span>C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse-1388160184\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="ReqresWithBDD.GetSingleUser" class="method navigator-link" hash-for-method="singleUser">singleUser</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Validation.ResponseTime" class="method navigator-link" hash-for-method="responseTime">responseTime</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">ReqresWithBDD.GetSingleUser</span>
+              <span class="class-name">Validation.ResponseTime</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="singleUser">
-                  </a> <!-- singleUser -->
-                  <span class="method-name">singleUser</span>
+                  <a name="responseTime">
+                  </a> <!-- responseTime -->
+                  <span class="method-name">responseTime</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse--1051228726\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse-1388160184\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,7 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;ReqresWithBDD.GetSingleUser&quot;/&gt;
+      &lt;class name=&quot;Validation.ResponseTime&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;responseTime&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- Validation.ResponseTime --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,9 +191,9 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'singleUser')
-data.setCell(0, 2, 'ReqresWithBDD.GetSingleUser')
-data.setCell(0, 3, 2855);
+data.setCell(0, 1, 'responseTime')
+data.setCell(0, 2, 'Validation.ResponseTime')
+data.setCell(0, 3, 2463);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -220,9 +224,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">ReqresWithBDD.GetSingleUser</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Validation.ResponseTime</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">singleUser</span>
+                <span class="method-name">responseTime</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
