--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse-1388160184\testng-customsuite.xml</span>
+                    <span>C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse-291680022\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Validation.ResponseTime" class="method navigator-link" hash-for-method="responseTime">responseTime</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Validation.ReqresValidation" class="method navigator-link" hash-for-method="validateDynamicResponse">validateDynamicResponse</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Validation.ReqresValidation" class="method navigator-link" hash-for-method="validateStaticResponse">validateStaticResponse</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +126,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Validation.ResponseTime</span>
+              <span class="class-name">Validation.ReqresValidation</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="responseTime">
-                  </a> <!-- responseTime -->
-                  <span class="method-name">responseTime</span>
+                  <a name="validateDynamicResponse">
+                  </a> <!-- validateDynamicResponse -->
+                  <span class="method-name">validateDynamicResponse</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validateStaticResponse">
+                  </a> <!-- validateStaticResponse -->
+                  <span class="method-name">validateStaticResponse</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +148,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse-1388160184\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse-291680022\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +157,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Validation.ResponseTime&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;responseTime&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- Validation.ResponseTime --&gt;
+      &lt;class name=&quot;Validation.ReqresValidation&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -189,16 +197,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'responseTime')
-data.setCell(0, 2, 'Validation.ResponseTime')
-data.setCell(0, 3, 2463);
+data.setCell(0, 1, 'validateDynamicResponse')
+data.setCell(0, 2, 'Validation.ReqresValidation')
+data.setCell(0, 3, 4069);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'validateStaticResponse')
+data.setCell(1, 2, 'Validation.ReqresValidation')
+data.setCell(1, 3, 321);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 seconds</span>
+              <span class="suite-total-time">Total running time: 4 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -224,10 +236,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Validation.ResponseTime</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Validation.ReqresValidation</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">responseTime</span>
+                <span class="method-name">validateDynamicResponse</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">validateStaticResponse</span>
+                <span class="method-start">4079 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
