--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="de60b4">  <td>24/03/22 09:16:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReqresValidation.validateDynamicResponse()[pri:0, instance:Validation.ReqresValidation@34123d65]">validateDynamicResponse</td> 
+<tr bgcolor="de60b4">  <td>24/03/22 11:19:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.createProject(java.lang.String,java.lang.String,java.lang.String,int)[pri:0, instance:Dataprovider.DataProviderTest@51399530]">createProject</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="de60b4">  <td>24/03/22 09:16:22</td>   <td>4081</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ReqresValidation.validateStaticResponse()[pri:0, instance:Validation.ReqresValidation@34123d65]">validateStaticResponse</td> 
+<tr bgcolor="de60b4">  <td>24/03/22 11:19:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.createProject(java.lang.String,java.lang.String,java.lang.String,int)[pri:0, instance:Dataprovider.DataProviderTest@51399530]">createProject</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="de60b4">  <td>24/03/22 11:19:36</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTest.createProject(java.lang.String,java.lang.String,java.lang.String,int)[pri:0, instance:Dataprovider.DataProviderTest@51399530]">createProject</td> 
   <td>main@1159190947</td>   <td></td> </tr>
 </table>
