--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse-1407389939\testng-customsuite.xml</span>
+                    <span>C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse-106814418\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,17 +103,22 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Dataprovider.DataProviderTest" class="method navigator-link" hash-for-method="createProject(Virat, RCB, Cricket, 57)">createProject(Virat, RCB, Cricket, 57)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="Dataprovider.DataProviderTest" class="method navigator-link" hash-for-method="createProject(Pankaj Advani, IND, Snooker, 20)">createProject(Pankaj Advani, IND, Snooker, 20)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="Dataprovider.DataProviderTest" class="method navigator-link" hash-for-method="createProject(Alon, Tesla, Owner, 99)">createProject(Alon, Tesla, Owner, 99)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Dataprovider.DataProviderTest" class="method navigator-link" hash-for-method="createProject(Virat, RCB, Cricket, 57)">createProject(Virat, RCB, Cricket, 57)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="Dataprovider.DataProviderTest" class="method navigator-link" hash-for-method="createProject(Virat, RCB, Cricket, 57)">createProject(Virat, RCB, Cricket, 57)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -136,14 +141,6 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="createProject(Virat, RCB, Cricket, 57)">
-                  </a> <!-- createProject(Virat, RCB, Cricket, 57) -->
-                  <span class="method-name">createProject</span>
-                  <span class="parameters">(Virat,RCB,Cricket,57)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
                   <a name="createProject(Pankaj Advani, IND, Snooker, 20)">
                   </a> <!-- createProject(Pankaj Advani, IND, Snooker, 20) -->
                   <span class="method-name">createProject</span>
@@ -158,12 +155,28 @@
                   <span class="parameters">(Alon,Tesla,Owner,99)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="createProject(Virat, RCB, Cricket, 57)">
+                  </a> <!-- createProject(Virat, RCB, Cricket, 57) -->
+                  <span class="method-name">createProject</span>
+                  <span class="parameters">(Virat,RCB,Cricket,57)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="createProject(Virat, RCB, Cricket, 57)">
+                  </a> <!-- createProject(Virat, RCB, Cricket, 57) -->
+                  <span class="method-name">createProject</span>
+                  <span class="parameters">(Virat,RCB,Cricket,57)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse-1407389939\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ADMIN\AppData\Local\Temp\testng-eclipse-106814418\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -212,24 +225,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'createProject')
 data.setCell(0, 2, 'Dataprovider.DataProviderTest')
-data.setCell(0, 3, 24280);
+data.setCell(0, 3, 2770);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'createProject')
 data.setCell(1, 2, 'Dataprovider.DataProviderTest')
-data.setCell(1, 3, 21356);
+data.setCell(1, 3, 86);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'createProject')
 data.setCell(2, 2, 'Dataprovider.DataProviderTest')
-data.setCell(2, 3, 1895);
+data.setCell(2, 3, 80);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'createProject')
+data.setCell(3, 2, 'Dataprovider.DataProviderTest')
+data.setCell(3, 3, 70);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 47 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -262,11 +279,15 @@ return data;
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">createProject(Pankaj Advani, IND, Snooker, 20)</span>
-                <span class="method-start">21372 ms</span>
+                <span class="method-start">2787 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">createProject(Alon, Tesla, Owner, 99)</span>
-                <span class="method-start">23288 ms</span>
+                <span class="method-start">2872 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">createProject(Virat, RCB, Cricket, 57)</span>
+                <span class="method-start">2963 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
